# marketdata_poly_binance

./: .gitignore  Dockerfile.rtt  README.md  analyze_binance_stream.py  analyze_pm_crypto_stream.py  analyze_pm_stream.py  compare_streams.py  docker-compose.yml  latency_visualizer.py  reaction_time_analyzer.py  receiver.py  requirements-rtt.txt  requirements.txt  run_uploader.sh  sender.py  test.py  test_binance_direct.py  test_binance_latency.py  test_parquet.py  test_pm_feed.py  test_polymarket_local.py  test_polymarket_rtt.py  visualize_market.py
collector/: Dockerfile  finalize_now.py  pyproject.toml
collector/src/collector/: __init__.py  main.py
collector/src/collector/schemas/: __init__.py  bbo.py  book.py  manifest.py  trade.py
collector/src/collector/state/: __init__.py  gaps.py  heartbeat.py
collector/src/collector/streams/: __init__.py  base.py  binance.py  polymarket.py
collector/src/collector/time/: __init__.py  boundaries.py
collector/src/collector/writers/: __init__.py  buffer.py  checkpoint.py  finalize.py
services/binance_pricer/: Dockerfile  pyproject.toml  requirements.txt
services/binance_pricer/src/binance_pricer/: __init__.py  app.py  binance_ws.py  config.py  feature_engine.py  health.py  hour_context.py  pricer.py  snapshot_publisher.py  snapshot_server.py  snapshot_store.py  types.py
services/binance_pricer/tests/: __init__.py  test_smoke.py
services/polymarket_trader/: Dockerfile  pyproject.toml  requirements.txt
services/polymarket_trader/src/polymarket_trader/: __init__.py  app.py  config.py  control_plane.py  decision_loop.py  executor.py  gamma_client.py  journal_sqlite.py  market_scheduler.py  order_manager.py  reducer.py  (+11 more)
services/polymarket_trader/tests/: __init__.py  test_smoke.py
uploader/: Dockerfile  pyproject.toml
uploader/src/uploader/: __init__.py  config.py  health.py  main.py  markers.py  notify.py  s3.py  scanner.py
(+180 files in other folders)
