[project]
name = "collector"
version = "0.1.0"
description = "Lightweight collector for Binance and Polymarket websocket streams"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "orjson>=3.9.0",
    "pyarrow>=14.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
collector = "collector.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
