[project]
name = "uploader"
version = "0.1.0"
description = "S3 uploader for finalized market data files"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34.0",
    "httpx>=0.27.0",
]

[project.scripts]
uploader = "uploader.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
