[project]
name = "binance_pricer"
version = "0.1.0"
description = "Container A: Binance data ingestion, features, and fair price computation for HourMM"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "orjson>=3.9.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
binance_pricer = "binance_pricer.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/binance_pricer"]
