[project]
name = "polymarket_trader"
version = "0.1.0"
description = "Container B: Polymarket trading, risk management, and execution for HourMM"
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "orjson>=3.9.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
polymarket_trader = "polymarket_trader.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_trader"]
